--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Paints</title>
     <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
     <script>
-        const skapi = new Skapi("ap22MXeGjqdJjon79Sdw", "a4dd8739-ceac-4fec-b708-8019b3cf131a");
+        const skapi = new Skapi('service_id', 'owner_id');
     </script>
     <link rel="stylesheet" href="styles.css">
 </head>
